# Scrib

./: .gitignore  Cargo.toml  Procfile
migrations/2019-01-26-013326_create_scribbles_tags_taggings/: down.sql  up.sql
migrations/2019-02-03-085618_make_scribbles_updatable/: down.sql  up.sql
migrations/2019-03-10-011651_from-scratch-with-postgres/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  server.rs
src/server/: db.rs
static/: index.html
templates/: index.hbs
