[package]
name = "scrib"
version = "0.1.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]

[dependencies]
docopt = "0.7"
rust-crypto = "0.2"
rustc-serialize = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
iron = "0.3"
router = "0.1"
handlebars = "0.16"
handlebars-iron = "0.15"

[features]
watch = ["handlebars-iron/watch"]
