[package]
name = "scrib"
version = "0.1.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]

[dependencies]
docopt = "1.0"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
iron = "0.6"
router = "0.6"
handlebars = "0.32"
handlebars-iron = "0.26"

[features]
watch = ["handlebars-iron/watch"]
