[package]
name = "scrib"
version = "0.1.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
chrono = "0.4"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.13"
futures = "0.1"
log = "0.4"
env_logger = "0.5"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.8.0"
structopt = "0.2"
